--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
        <h3>
        Connect with me:
        </h3>
-       <p>
-       Feel free to connect with me on social media.
+<p>
+       Feel free to connect with me on discord and gmail!
+       <br>
+       Gmail: Kianaylee@gmail.com
+       Discord: B o o#8721
        </p>
        <a href="https://www.discord.com/"><button>
        Discord
