--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      </div>
      
     <div class="navbar">
-      <a href="#">Home</a>
-      <a href="#">Fun Facts</a>
+      <a href="index.html">Home</a>
+      <a href="funfact.html">Fun Facts</a>
       <a href="#">Articles</a>
       <a href="#">Quotes</a>
       <a href="#" class="right">Contact</a>
@@ -47,6 +47,7 @@
        Feel free to connect with me on discord and gmail!
        <br>
        Gmail: Kianaylee@gmail.com
+         <br>
        Discord: B o o#8721
        </p>
        <a href="https://www.discord.com/"><button>
