--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
        </a>
 
 
-       <h3>
-       Plants:
+        <h3>
+       Lofi Music
        </h3>
-       <image src="https://ih1.redbubble.net/image.1868121058.6589/st,small,507x507-pad,600x600,f8f8f8.jpg" height=100 width= 100></image>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="main">
       <h2>
