--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="funfact.html">Fun Facts</a>
-      <a href="#">Articles</a>
+      <a href="#article">Articles</a>
       <a href="#">Quotes</a>
       <a href="#" class="right">Contact</a>
     </div>
@@ -61,7 +61,7 @@
        </h3>
        <iframe width="560" height="315" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="main">
+      <div class="main" id="article">
       <h2>
       My First Article
       </h2>
